--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             body{
                 margin: 0;
                 padding: 0;
+                min-height: 100vh;
                 background: linear-gradient(to bottom,rgb(255, 192, 203),rgb(196, 115, 128));
                 font-family: 'Dancing script', cursive;
                 text-align: center;
