--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="manifest" href="manifest.json">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contador de tiempo</title>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Dancing+script:wght@600&family=Nunito:wght@300;600&display=swap');
