--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
            /*@import url('https://fonts.googleapis.com/css2?family=Dancing+script:wght@600&family=Nunito:wght@300;600&display=swap');*/
 
             #contador{
-                font-size: 1.2rem;
+                font-size: 1.5rem;
                 font-weight: bold;
             }
             body{
@@ -25,6 +25,8 @@
                 margin-top: 50px;
             }
             #contador-container {
+            font-size: 1.8rem;
+            font-weight: bold;
             position: relative;
             bottom: 20px;
             left: 20px;
@@ -130,4 +132,5 @@
         </script>
 
     </body>
+
 </html>
