--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 opacity: 0;
                 transform: translateY(20px);
                 transition: all 1s ease;
+                font-family: Arial, Helvetica, sans-serif;
+                font-weight: bold;
+                font-size: 1.7rem;
             }
 
             #bloque-texto.mostrar{
